<?xml version="1.0"?>
<package format="2">
  <name>tcp_ros_bridge</name>
  <version>0.0.1</version>
  <description>The tcp_ros_bridge package</description>
  <maintainer email="letusgoone@outlook.com">sango</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp std_msgs</build_depend>
  <build_export_depend>roscpp std_msgs</build_export_depend>
  <exec_depend>roscpp std_msgs</exec_depend>
</package>
